# tinker

./: .gitignore  README.md  package-lock.json
CrimeLens-Bot/: app.py  homicide-data.csv
click-python/: main.py  todo.txt
golang/greeting/: go.mod  greeting.go  greeting_test.go
golang/hello/: go.mod  hello.go
nextjs-dashboard/: package-lock.json
nextjs-dashboard/app/: layout.tsx  page.tsx
nextjs-dashboard/app/dashboard/: layout.tsx
nextjs-dashboard/app/dashboard/(overview)/: loading.tsx  page.tsx
nextjs-dashboard/app/dashboard/customers/: page.tsx
nextjs-dashboard/app/dashboard/invoices/: page.tsx
nextjs-dashboard/app/dashboard/invoices/[id]/edit/: page.tsx
nextjs-dashboard/app/ui/: search.tsx
nextjs-dashboard/app/ui/invoices/: create-form.tsx  pagination.tsx
sample_package/: README.md  setup.cfg
