[project]
name = "example_vgnshiyer"
version = "0.0.1"
authors = "vgnshiyer (Vignesh Iyer) <vgnshiyer@gmail.com>"
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = 
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"